neu: - Package DTO integriert - redundante Eingabe von Daten auf Database Ebene abgefangen - Globale Fehlerbehandlung integriert